# nix-development-configs

./: .gitignore
cpp-specific-toolchain/: flake.nix  main.nix
haskell-clash/: CHANGELOG.md  LICENSE  MAC.hi  MAC.hs  Main.hs  README.md  cabal.project  clash-only-shell.nix  clash-test.cabal  default.nix  example-clash-package.cabal  flake.nix  shell.nix
haskell-clash/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-clash/lib/: ExampleLib.hs
haskell-clash/nix/: sources.json
haskell-clash/vhdl/MAC/: mac_types.vhdl  topentity.manifest  topentity.vhdl
haskell-project/: README.md
pythonflake-mach-nix/: flake.nix  setup.py
pythonflake-mach-nix/pythonflake_mach_nix/: __init__.py  __main__.py
pythonflake-python2nix/: README.rst  flake.nix  pyproject.toml
pythonflake-python2nix/pythonflake/: __init__.py
pythonflake-python2nix/tests/: test_pythonflake.py
