cabal-version:   2.4
name:            clash-test
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          harris-chris
maintainer:      harris-chris <chrisharriscjh@gmail.com>
copyright:       2021 harris-chris
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/haskell-nix-test#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/haskell-nix-test.git

common common-options
  build-depends:    
    base >=4.9 && <5
    --clash-ghc >= 1.4.3
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

--library
  --import:          common-options
  --hs-source-dirs:  src
  --exposed-modules: Lib
  --build-depends:
    --, containers
    --, mtl

executable haskell-nix-test-exe
  import:         common-options
  hs-source-dirs: ., app
  main-is:        Main.hs
  build-depends: 
    haskell-say ^>=1.0.0.0
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

--test-suite haskell-nix-test-test
  --import:         common-options
  --type:           exitcode-stdio-1.0
  --hs-source-dirs: test
  --main-is:        Spec.hs
  --build-depends:
    --, hspec
    --, HUnit
    --, haskell-nix-test
    --, QuickCheck

  --ghc-options:    -threaded -rtsopts -with-rtsopts=-N

--benchmark haskell-nix-test-bench
  --import:         common-options
  --type:           exitcode-stdio-1.0
  --hs-source-dirs: bench
  --main-is:        Main.hs
  --build-depends:
    --, criterion
    --, haskell-nix-test

  --ghc-options:    -threaded -rtsopts -with-rtsopts=-N
